cli/tests/snapshots/help__inspect_tree_stats.snap
---
source: cli/tests/help.rs
expression: "help(&[\"inspect\", \"tree-stats\"])"
---
Print statistics about trees in a btrfs filesystem

Usage: tree-stats <PATH>

Arguments:
  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -h, --help
          Print help
