cli/tests/snapshots/help__property.snap
---
source: cli/tests/help.rs
expression: "help(&[\"property\"])"
---
Modify properties of filesystem objects.

Get, set, and list properties of filesystem objects including subvolumes,
inodes, the filesystem itself, and devices. Properties control various aspects
of filesystem behavior such as read-only status, compression, and labels. Most
property operations require CAP_SYS_ADMIN or appropriate filesystem permissions.

Usage: property <COMMAND>

Commands:
  get   Get a property value of a btrfs object
  set   Set a property on a btrfs object
  list  List available properties with their descriptions for the given object
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
