cli/tests/snapshots/help__qgroup.snap
---
source: cli/tests/help.rs
expression: "help(&[\"qgroup\"])"
---
Manage quota groups.

Create, destroy, and configure quota groups to enforce storage limits and track
usage for subvolumes and hierarchies of subvolumes. Quota groups provide
flexible quota management that can be applied at different levels in the
subvolume hierarchy. Most operations require CAP_SYS_ADMIN.

Usage: qgroup <COMMAND>

Commands:
  assign       Assign a qgroup as the child of another qgroup
  remove       Remove the relation between child qgroup SRC and DST
  create       Create a subvolume quota group
  destroy      Destroy a quota group
  show         List subvolume quota groups
  limit        Set limits on a subvolume quota group
  clear-stale  Clear all stale qgroups (level 0/subvolid) without a subvolume
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
