cli/tests/snapshots/help__qgroup_remove.snap
---
source: cli/tests/help.rs
expression: "help(&[\"qgroup\", \"remove\"])"
---
Remove the relation between child qgroup SRC and DST

Usage: remove [OPTIONS] <SRC> <DST> <PATH>

Arguments:
  <SRC>
          Source qgroup id (e.g. "0/5")

  <DST>
          Destination qgroup id (e.g. "1/0")

  <PATH>
          Path to a mounted btrfs filesystem

Options:
      --rescan
          Schedule quota rescan if needed (default)

      --no-rescan
          Don't schedule quota rescan

  -h, --help
          Print help
