cli/tests/snapshots/help__qgroup_show.snap
---
source: cli/tests/help.rs
expression: "help(&[\"qgroup\", \"show\"])"
---
List subvolume quota groups

Usage: show [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
      --sort <SORT>
          Sort by a comma-separated list of fields (qgroupid, rfer, excl,
          max_rfer, max_excl)

      --sync
          Force a sync before getting quota information

  -h, --help
          Print help

Column selection:
  -p, --print-parent
          Print parent qgroup id

  -c, --print-child
          Print child qgroup id

  -r, --print-rfer-limit
          Print limit of referenced size

  -e, --print-excl-limit
          Print limit of exclusive size

Filtering:
  -F, --filter-all
          List all qgroups impacting path, including ancestral qgroups

  -f, --filter-direct
          List all qgroups impacting path, excluding ancestral qgroups

Size units:
      --raw
          Show raw numbers in bytes

      --human-readable
          Show human friendly numbers, base 1024 (default)

      --iec
          Use 1024 as a base (IEC units)

      --si
          Use 1000 as a base (SI units)

      --kbytes
          Show sizes in KiB

      --mbytes
          Show sizes in MiB

      --gbytes
          Show sizes in GiB

      --tbytes
          Show sizes in TiB
